--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </div>
         <div class="con2"><p>
             POINTING PLACES IN <span>INDIA MAP</span>
+            <h2>click madhyapradesh to explore more temples </h3>
         </p></div>
     </div>
     <map name="mymap">
