--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <img src="india-map.jpg"  usemap="#mymap" />
         </div>
         <div class="con2"><p>
-            POINTING PLACES IN <span>INDIA MAP</span>
+            POINTING PLACES IN <span>MADHYAPRADESH</span>
             <h2>click madhyapradesh to explore more temples </h3>
         </p></div>
     </div>
