--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="con2"><p>
             POINTING PLACES IN <span>MADHYAPRADESH</span>
-            <h2>click madhyapradesh to explore more temples </h3>
+            <h2>click Madhyapradesh to explore more temples </h3>
         </p></div>
     </div>
     <map name="mymap">
