--- a/touristplaces.html
+++ b/touristplaces.html
@@ -30,7 +30,8 @@
         <div class="heading">
         <p>
             The Khajuraho Group of Monuments are a group of Hindu  and Jain temples in  Chhatarpur district, Madhya Pradesh, India. They are about 175 kilometers southeast of Jhansi, 10km from Azad Nagar Khajwa, 9km from Rajnagar and 49 km from district headquarter Chhatarpur. They are a UNESCO World Heritage Site. 
-        </p>
+          </p>
+          <h4>Click the following temples to explore temples in Map </h4>
       </div>
       <div class="content">
         <h2>Famous Tourist places</h2>
